<resources>
    <string name="app_name">LWAToken</string>
    <string name="Welcome">Welcome to Melexa!</string>
    <string name="loginAmazonFirst">Log in with Amazon account to use Alexa!</string>
    <string name="logout">Logout</string>
    <string name="login_success">Congratulation! You login successfully!</string>
    <string name="return_to_app">Return to App!</string>
    <string name="Listen">Listening</string>
    <string name="Process">Processing</string>
    <string name="Responce">Responcing</string>
</resources>
