<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.xumeng.lwatoken.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        >
        <ProgressBar
            android:id="@+id/log_in_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            style="@android:style/Widget.ProgressBar.Inverse"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Welcome"
            android:textSize="32sp"
            android:textAlignment="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="100dp"
            />

        <TextView
            android:id="@+id/hint_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginAmazonFirst"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            />
    </LinearLayout>

    <ImageButton
        android:id="@+id/login_with_amazon"
        android:src="@color/login_button_image_state"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/logout"
        android:text="@string/logout"
        android:visibility="gone"
        android:clickable="true"
        android:paddingBottom="10dp" />
    <!--android:textColor="@color/logout_text_color_state"-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recording"
        android:text="@string/Listen"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/return_to_app"
        android:text="@string/return_to_app"
        android:visibility="gone"
        android:clickable="true"
        android:paddingBottom="10dp"/>

</RelativeLayout>
